force-app/src/objects/c2g__Allocation__c.object
<CustomObject>
    <customHelpPage>c2g__helpallocations</customHelpPage>
    <description>Stores information about the allocation record.</description>
    <fields>
        <fullName>c2g__AllocationMethod__c</fullName>
        <label>Allocation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable &gt; Statistical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__AllocationTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The allocation template that will used for the allocation.</description>
        <label>Allocation Template</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>The selected allocation template is not activated.</errorMessage>
            <filterItems>
                <field>c2g__AllocationTemplate__c.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__AllocationTemplate__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Allocation</relationshipLabel>
        <relationshipName>Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Allocation</relationshipLabel>
        <relationshipName>Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Credit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The sum of the credit values of all the allocated TLIs.</description>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DateFrom__c</fullName>
        <description>The starting date for retrieving the transaction lines according to the source criteria defined for the allocation.</description>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DateTo__c</fullName>
        <description>The date until when the transaction lines according to the defined source criteria for the allocation are retrieved.</description>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Debit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The sum of the debit values of all the allocated TLIs.</description>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationType__c</fullName>
        <formula>IF(AND(c2g__TotalNumberOfErrors__c=0,c2g__TotalNumberOfAborts__c=0,c2g__TotalNumberOfExternal__c=0, c2g__TotalNumberOfLogs__c &gt; 0),
            &apos;Successful&apos;,
            IF(c2g__TotalNumberOfErrors__c &gt; 0,
            &apos;Failure&apos;,
            IF(c2g__TotalNumberOfAborts__c &gt; 0,
            &apos;Failure&apos;,
            IF( c2g__TotalNumberOfExternal__c &gt; 0,
            &apos;Failure&apos;,
            &apos;&apos;
            )
            )
            )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Output__c</fullName>
        <label>Output</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transactions</fullName>
                </value>
                <value>
                    <fullName>Journals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PeriodFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The period from when the transaction lines according to the source criteria defined for the allocation are retrieved.</description>
        <label>Period From</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>AllocationPeriodFrom</relationshipLabel>
        <relationshipName>AllocationPeriodFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The period until when the transaction lines according to the source criteria defined for the allocation are retrieved.</description>
        <label>Period To</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>AllocationPeriodTo</relationshipLabel>
        <relationshipName>AllocationPeriodTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PostingDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date that will be displayed on the generated transactions or journals after running the allocation process. By default, the value is the current date.</description>
        <label>Posting Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__PostingPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Posting Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Allocation</relationshipLabel>
        <relationshipName>Allocation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RetrieveTransactionsBy__c</fullName>
        <label>Retrieve Transactions By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>c2g__AllocationLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__AllocationLog__c.c2g__Allocation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>c2g__AllocationLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__AllocationLog__c.c2g__Allocation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>c2g__AllocationLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__AllocationLog__c.c2g__Allocation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>c2g__AllocationLog__c.c2g__Allocation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Allocation</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__AllocationMethod__c</columns>
        <columns>c2g__Output__c</columns>
        <columns>c2g__PostingPeriod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>c2g__NotificationType__c</columns>
        <columns>c2g__BatchProcess__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Allocation {000000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>